istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ququiz-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80 
      name: http 
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ququiz
spec:
  hosts:
  - "*"
  gateways:
  - ququiz-gateway
  http:
  - match:
    - uri: 
        prefix: /quiz-query
    rewrite:
      uri: /
    route:
    - destination:
        host: quiz-query-service
        port:
          number: 3503
  - match:
    - uri: 
        prefix: /quiz-command/
    rewrite:
      uri: /
    route:
    - destination:
        host: quiz-command-service
        port:
          number: 3000

  - match:
    - uri: 
        prefix: /auth/
    rewrite:
      uri: /
    route:
    - destination:
        host: auth-service
        port:
          number: 3000
  - match:
    - uri: 
        prefix: /scoring
    rewrite:
      uri: /
    route:
    - destination:
        host: scoring-service
        port:
          number: 3504
  - match: 
    - uri: 
        prefix: /nginx
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx-project
        port:
          number: 80
